--- a/client/style.css
+++ b/client/style.css
@@ -3,15 +3,48 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.header {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header input {
+    width: 25vw;
 }
 
 .container {
-    display: flex;
-    /* background: yellow; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .card {
-    margin: 20px;
+    width: 50%;
+    margin: 20px auto;
     padding: 20px;
-    /* background: blue; */
+    color: black;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-content: center;
+}
+
+.card h4 {
+    margin-top: .3rem;
+    font-weight: 500;
+}
+
+.card:hover {
+    text-decoration: underline;
+}
+
+.card img {
+    width: 160px;
+    height: 225px;
 }
